...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_Message" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:text="Delete Message"
        android:onClick="eraseMessage"
        app:layout_constraintRight_toRightOf="parent"
...
