...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827"
        app:layout_constraintHorizontal_bias="0.739" />

    <Button
        android:id="@+id/messageBButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message Board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.230"
        app:layout_constraintLeft_toLeftOf="parent"
...
